# kenguru

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: github-runtest.yaml
cmd/: main.py
core/: translator.py
scripts/: commit.sh
store/: mongodb.py  sqlite3.py  store.py
tests/: test_database.py  test_translator.py
