[tool.poetry]
name = "kenguru"
version = "0.1.1"
description = "English language learning program"
authors = ["Nickolsky Roman <romb.intu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "cmd:main"
