[tool.poetry]
name = "kenguru"
version = "0.1.4"
description = "English language learning program"
authors = ["Nickolsky Roman <romb.intu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.10"
pymongo = "^4.3.3"
pymongo-inmemory = "^0.2.11"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "cmd:main"
